[package]
name = "mcq"
version = "0.1.0"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
keywords = ["median", "color", "matching", "quantization", "graphics"]
description = "A Rust port of Java implementation of Median Cut Quantization algorithm. "
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snuk182/mcq.git"
homepage = "https://github.com/snuk182/mcq"

[dev-dependencies]
image = "~0.10"